--- a/BibleBeatMe/Views/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Views/Base.lproj/Main.storyboard
@@ -1145,10 +1145,10 @@
                                 <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4bG-kE-YIq">
-                                <rect key="frame" x="0.0" y="156.33333333333334" width="414" height="446.66666666666663"/>
+                                <rect key="frame" x="0.0" y="124.33333333333334" width="414" height="478.66666666666663"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aot-nG-ROs">
-                                        <rect key="frame" x="82.666666666666671" y="28.999999999999993" width="248.66666666666663" height="71.333333333333314"/>
+                                        <rect key="frame" x="82.666666666666671" y="23.333333333333314" width="248.66666666666663" height="76.333333333333329"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
                                         <state key="normal" title="Rights: 5">
                                             <color key="titleColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1163,7 +1163,7 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9WK-Z6-b5d">
-                                        <rect key="frame" x="82.666666666666671" y="120.33333333333334" width="248.66666666666663" height="71.333333333333343"/>
+                                        <rect key="frame" x="82.666666666666671" y="119.66666666666666" width="248.66666666666663" height="76.666666666666657"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
                                         <state key="normal" title="Wrongs: 3">
                                             <color key="titleColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1178,7 +1178,7 @@
                                         </variation>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congrats! You can do it, go for more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="lpz-4Y-5Gm">
-                                        <rect key="frame" x="41.333333333333343" y="248.99999999999997" width="331.33333333333326" height="29.333333333333343"/>
+                                        <rect key="frame" x="41.333333333333343" y="254.66666666666666" width="331.33333333333326" height="29.333333333333343"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1203,8 +1203,8 @@
                                 <color key="textColor" red="1" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Results" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="H6o-Xi-1SI">
-                                <rect key="frame" x="172.66666666666666" y="113.33333333333333" width="70.333333333333343" height="29.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="H6o-Xi-1SI">
+                                <rect key="frame" x="151" y="113" width="112" height="0.0"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -1219,7 +1219,7 @@
                             <constraint firstItem="U1Z-kH-OYY" firstAttribute="width" secondItem="Wlb-Uo-RfQ" secondAttribute="width" id="HoM-Io-PEe"/>
                             <constraint firstItem="H6o-Xi-1SI" firstAttribute="centerX" secondItem="Wlb-Uo-RfQ" secondAttribute="centerX" id="JYZ-eu-k9c"/>
                             <constraint firstItem="U1Z-kH-OYY" firstAttribute="centerX" secondItem="dAg-DV-8Hx" secondAttribute="centerX" id="Mpt-Dc-MoX"/>
-                            <constraint firstItem="H6o-Xi-1SI" firstAttribute="width" secondItem="Wlb-Uo-RfQ" secondAttribute="width" multiplier="0.17" id="aUL-bE-fbK"/>
+                            <constraint firstItem="H6o-Xi-1SI" firstAttribute="width" secondItem="Wlb-Uo-RfQ" secondAttribute="width" multiplier="0.27" id="aUL-bE-fbK"/>
                             <constraint firstItem="U1Z-kH-OYY" firstAttribute="top" secondItem="Wlb-Uo-RfQ" secondAttribute="bottom" constant="-69" id="cxp-pL-Eyt"/>
                             <constraint firstItem="4bG-kE-YIq" firstAttribute="centerX" secondItem="dAg-DV-8Hx" secondAttribute="centerX" id="gfv-xd-tdy"/>
                             <constraint firstItem="4bG-kE-YIq" firstAttribute="width" secondItem="Wlb-Uo-RfQ" secondAttribute="width" id="lRB-B6-1Kb"/>
